--- a/source/CatEars/CatEars/CatEars.csproj
+++ b/source/CatEars/CatEars/CatEars.csproj
@@ -45,6 +45,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adapter\Repositories\InMemoryCatRepository.cs" />
+    <Compile Include="Adapter\Repositories\InMemoryInteractionRepository.cs" />
+    <Compile Include="Adapter\UI\AddCat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Adapter\UI\AddCat.Designer.cs">
+      <DependentUpon>AddCat.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Domain\BreedEnum.cs" />
+    <Compile Include="Domain\Cat.cs" />
+    <Compile Include="Domain\CatId.cs" />
+    <Compile Include="Domain\Id.cs" />
+    <Compile Include="Domain\IntegerId.cs" />
+    <Compile Include="Domain\Interaction.cs" />
+    <Compile Include="Domain\InteractionId.cs" />
+    <Compile Include="Domain\InteractionTypeEnum.cs" />
+    <Compile Include="Domain\Repositories\ICatRepository.cs" />
+    <Compile Include="Domain\Repositories\IInteractionRepository.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -53,6 +71,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Adapter\UI\AddCat.resx">
+      <DependentUpon>AddCat.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -74,6 +98,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Application\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
