--- a/source/pom.xml
+++ b/source/pom.xml
@@ -5,7 +5,7 @@
     <groupId>crystalshard</groupId>
     <artifactId>catears</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>catears</name>
     <url>http://maven.apache.org</url>
@@ -117,6 +117,13 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <webXml>src\main\resources\webapp\WEB-INF\web.xml</webXml>
                 </configuration>
             </plugin>
         </plugins>
